--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
         <h1>Odin Recipies</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ol>
+            <li><a href="recipes/lasagna.html" >Lasagna</a></li>
+            <li><a href="recipes/pie.html">Pie</a></li>
+        </ol>
+        
 </body>
 </html>
