--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,13 +7,38 @@
 </head>
 <body>
   <h1>Lasagna</h1>  
-  <img src="../images/lasagna.webp" alt="">
-  <h3>picture of tasty lasagna</h3>
+  <figure>
+    <img src="../images/lasagna.webp" alt="">
+    <figcaption>picture of tasty lasagna</figcaption>
+  </figure>
+  
   <p>Lorem ipsum dolor sit amet consectetur
      adipisicing elit. Ea aliquid dicta quam vel
       beatae nemo earum sed! Ea maxime harum hic 
       sit, consectetur ducimus expedita at volupt
-      atibus repellendus nulla tempora.</p>
-
+      atibus repellendus nulla tempora.
+    lorem29</p>
+    <p>Lorem ipsum dolor sit amet c
+      onsectetur adipisicing elit. Eum praesentium 
+      molestias assumenda deserunt aspernatur, culpa, hic de
+      bitis error fugiat temporibus asperiores earum
+      laudantium doloribus! Optio ipsam ex aut illum.</p>
+  
+  <h3>Ingredients</h3>
+  <ul>
+    <li>Meat</li>
+    <li>Onion and garlic</li>
+    <li>cheeses</li>
+    <li>Egg</li>
+    <li>Spices and sugar(not recommended)</li>
+    </ul>
+  <h3>Steps</h3>
+  <ol>
+    <li>Make the meat sauce</li>
+    <li>Cook the noodles</li>
+    <li>Make the riccotta mixture</li>
+    <li>Cover the foil and bake</li>
+    <li>Let the lasagna rest before serving</li>
+  </ol>
 </body>
 </html>
